# ray-tracer

./: .gitignore  CMakeLists.txt
ray-tracer/: CMakeLists.txt  config.h  myApp.cpp  myApp.h  myImage.cpp  myImage.h  ray-tracer.cpp  ray.h  renderer.cpp  renderer.h  scene.h
